--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,14 @@
+^Meta$
+^doc$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^.*\.o$
+^LICENSE\.txt$
+^Contributing\.md$
+^\.travis\.yml$
+^cran-comments\.md$
+^man-roxygen$
+^revdep$
+^man/figures$
+^codecov\.yml$
+^CRAN-RELEASE$
